	*						 *
	**************************************************


		CHANGES IN R VERSION 1.8.2


BUG FIXES

    o	When lm.{w}fit() disregarded arguments in ... they reported
	the values and not the names.

    o	lm(singular.ok=FALSE) was looking for 0 rank, not rank < p. 

    o	The substitution code for strptime in the sources no longer
	follows glibc in silently `correcting' invalid inputs.



		CHANGES IN R VERSION 1.8.1


NEW FEATURES

    o	There is now a "Complex" S3 group generic (a side-effect of
	fixing up the corresponding S4 group generic).

    o	help("regex") now gives a description of the regular expressions
	used in R.

    o	The startup message now shows the R Foundation as copyright
	holder, and includes the R ISBN number and a pointer to the new
	citation() function.

    o	The solve() function now uses the `tol' argument for all
	non-complex cases.  The default tolerance for LINPACK is 1e-7,
	as before.  For LAPACK it currently is .Machine$double.eps but
	may be changed in later versions of R.

    o	help.search() now defaults to agrep = FALSE when keyword= is
	specified, since no one wants fuzzy matching of categories.

    o	Function texi2dvi() in package tools can be used to compile
	latex files from within R.

    o	Objects with formal S4 classes saved in pre-1.8 versions and
	loaded into the current version have incompatible class
	attributes (no package information).  A new function,
	fixPre1.8() in package methods, will fix the class attributes.
	See the help for this function.

    o	heatmap() allows Rowv/Colv = NA, suppressing the corresponding
	dendrogram.

    o   An "antifeature": Tcl 8.0 is now officially unsupported. In 1.8.0
	it just didn't work. This very old version lacks several features
        that are needed for the new version of the tcltk package. R will
	still build the tcltk package against Tcl 8.0 but the resulting
	package will not load.


BUG FIXES

    o	symnum(x) now behaves as documented when length(x) == 0 and uses